Debugged negative number at the start of the string + added color themes + Uploaded app's avatar.